# btrup

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  btrup.py  pyproject.toml  test_btrup.py
.github/: requirements-old.txt
.github/scripts/: extract-notes.sh
.github/workflows/: pytest.yaml  release.yaml
