[build-system]
requires = ["setuptools>=65.0", "setuptools_scm>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "btrup"
authors = [
  { name="Toon Verstraelen", email="toon.verstraelen@ugent.be" },
]
description = "BtrUp: Btrfs + Borg backup script"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = ["attrs>=24.2.0", "cattrs>=24.1.1"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
]


[project.scripts]
btrup = "btrup:main"

[project.urls]
Documentation = "https://github.com/reproducible-reporting/btrup/"
Issues = "https://github.com/reproducible-reporting/btrup/issues"
Source = "https://github.com/reproducible-reporting/btrupt/"
Changelog = "https://github.com/reproducible-reporting/btrup/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = ["btrup"]

[tool.pytest.ini_options]
addopts = "-W error -W ignore::ResourceWarning"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "A", "B", "BLE", "C4", "E", "EXE", "F", "I", "ICN", "ISC", "N", "NPY", "PERF", "PIE", "PL",
    "PT", "PYI", "RET", "RSE", "RUF", "SIM", "TRY", "UP", "W"
]
ignore = [
    "PLR0904",  # https://docs.astral.sh/ruff/rules/too-many-public-methods/
    "PLR0911",  # https://docs.astral.sh/ruff/rules/too-many-return-statements/
    "PLR0912",  # https://docs.astral.sh/ruff/rules/too-many-branches/
    "PLR0913",  # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "PLR0914",  # https://docs.astral.sh/ruff/rules/too-many-locals/
    "PLR0915",  # https://docs.astral.sh/ruff/rules/too-many-statements/
    "PLR0916",  # https://docs.astral.sh/ruff/rules/too-many-boolean-expressions/
    "PLR0917",  # https://docs.astral.sh/ruff/rules/too-many-positional/
    "PLR2004",  # https://docs.astral.sh/ruff/rules/magic-value-comparison/
    "PLW2901",  # https://docs.astral.sh/ruff/rules/redefined-loop-name/
    "PT011",  # https://docs.astral.sh/ruff/rules/pytest-raises-too-broad/
    "RET503",  # https://docs.astral.sh/ruff/rules/implicit-return/
    "TRY003",  # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
    "TRY300",  # https://docs.astral.sh/ruff/rules/try-consider-else/
    "TRY301",  # https://docs.astral.sh/ruff/rules/raise-within-try/
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
